# FfSolverRust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bin.rs  board.rs  board_helper.rs  board_node.rs  board_normalization.rs  card.rs  card_move.rs  cascade_map.rs  example.txt  lib.rs  solve_cli.rs  solve_ui.rs  solver.rs
