[package]
name = "ff_solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "ff_solver_lib"
path = "src/lib.rs"

[[bin]]
name = "ff_solver_app"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
itertools = "0.12.*"